<resources>
    <string name="app_name">WordPress Client</string>
    <string name="title_activity_blogs_list">BlogsList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Вася Иванов</string>
    <string name="nav_header_subtitle">heyfromsteph@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_nav_blogs">Блоги</string>
    <string name="text_nav_category">Категории</string>
    <string name="text_nav_tags">Метки</string>
    <string name="text_nav_favotite">Избранное</string>
    <string name="text_nav_marks">Закладки</string>
    <string name="text_nav_exit">Выход</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_tittle_blogs">Мои блоги</string>
    <string name="text_tittle_markers">Метки</string>
    <string name="text_tittle_category">Категории</string>
    <string name="text_tittle_blogs_name">Название блога</string>
    <string name="text_tittle_post_tag">Заголовок поста</string>
    <string name="text_post_date">Дата создания</string>
    <string name="text_post_tittle">Заголовок поста</string>
    <string name="text_post_category">Категория</string>
    <string name="text_post_author">Автор</string>
    <string name="text_post_name_blog">Название блога</string>
    <string name="text_post_description">
        In the tumultuous business of cutting-in and attending to a whale,
        there is much running backwards and forwards among the crew. Now hands are wanted here, and then again hands are wanted there.
        There is no staying in any one place; for at one and the same time everything has to be done everywhere.
        It is much the same with him who endeavors the description of the scene. We must now retrace our way a little.
        In the tumultuous business of cutting-in and attending to a whale,
        there is much running backwards and forwards among the crew. Now hands are wanted here, and then again hands are wanted there.
        There is no staying in any one place; for at one and the same time everything has to be done everywhere.
        It is much the same with him who endeavors the description of the scene. We must now retrace our way a little.
        In the tumultuous business of cutting-in and attending to a whale,
        there is much running backwards and forwards among the crew. Now hands are wanted here, and then again hands are wanted there.
        There is no staying in any one place; for at one and the same time everything has to be done everywhere.
        It is much the same with him who endeavors the description of the scene. We must now retrace our way a little.
    </string>
    <string name="text_post_button">12 Комментариев</string>
    <string name="text_menu_send">send</string>
    <string name="text_menu_tags">tags</string>
    <string name="text_menu_item">Item</string>
    <string name="hint_profile_name">Имя</string>
    <string name="hint_profile_second">Фамилия</string>
    <string name="hint_profile_login">Отображаемое для всех имя</string>
    <string name="hint_profile_about">Обо мне</string>
    <string name="text_tittle_profile">Мой профиль</string>
    <string name="text_profile_name">Артур</string>
    <string name="text_profile_second">Корчагин</string>
    <string name="text_profile_login">artkorchagin</string>
    <string name="text_profile_about">Андроид - разработчик</string>
    <string name="text_sign_in">Войти</string>
    <string name="text_sign_out">Зарегистрироваться</string>
    <string name="wordpress">WordPress</string>
</resources>
