<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_bottom_post_constraint">

            <TextView
                android:id="@+id/text_post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="@dimen/margin_start_post_text"
                android:layout_marginTop="@dimen/margin_top_post_text_date"
                android:drawablePadding="@dimen/padding_post_drawable"
                android:drawableStart="@drawable/ic_access_time_black_24dp"
                android:text="@string/text_post_date"
                android:textSize="@dimen/size_post_text_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Дата создания" />

            <TextView
                android:id="@+id/text_post_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="@dimen/margin_start_post_text"
                android:layout_marginTop="@dimen/margin_top_post_text_tittle"
                android:text="@string/text_post_tittle"
                android:textColor="@android:color/black"
                android:textSize="@dimen/size_post_text_tittle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Заголовок поста" />

            <TextView
                android:id="@+id/text_post_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="@dimen/margin_start_post_text"
                android:layout_marginTop="@dimen/margin_top_post_text_category"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/text_post_category"
                android:textColor="@android:color/black"
                android:textSize="@dimen/size_post_text_category"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Категория" />

            <ImageView
                android:id="@+id/image_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="@dimen/margin_top_post_image"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/material_image_3_big" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycle_view_post_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="@dimen/margin_start_post_text"
                android:layout_marginTop="@dimen/margin_top_post_tag"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

            </android.support.v7.widget.RecyclerView>

            <ImageView
                android:id="@+id/image_avatar"
                android:layout_width="@dimen/image_post_avatar"
                android:layout_height="@dimen/image_post_avatar"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="@dimen/margin_start_post_text"
                android:layout_marginTop="@dimen/margin_start_post_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle_view_post_tag"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_avatar_astronaut"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/text_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="@dimen/margin_start_post_text_author"
                android:text="@string/text_post_author"
                android:textColor="@color/text_color_post_author"
                android:textSize="@dimen/text_size_post_author"
                app:layout_constraintBottom_toBottomOf="@+id/image_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/image_avatar"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/text_name_blog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_post_text_author"
                android:text="@string/text_post_name_blog"
                android:textColor="@color/text_color_post_name_blog"
                android:textSize="@dimen/text_size_post_name_blog"
                app:layout_constraintBottom_toBottomOf="@+id/image_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/image_avatar"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/text_post_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="@dimen/margin_end_post_text"
                android:layout_marginStart="@dimen/margin_start_post_text"
                android:layout_marginTop="@dimen/margin_top_post_description"
                android:text="@string/text_post_description"
                android:textSize="@dimen/text_size_post_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_avatar"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_horizontal_button"
                android:layout_marginStart="@dimen/margin_horizontal_button"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/text_post_button"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_post_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_post_description" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="@dimen/fab"
        android:layout_height="@dimen/fab"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginStart="8dp"
        android:layout_marginTop="156dp"
        android:src="@drawable/ic_forum_black_24dp"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>